# BG3-Save-Manager

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
flatpak/: README.md  cargo-sources.json  com.evernite.BG3SaveManager.desktop  com.evernite.BG3SaveManager.metainfo.xml  com.evernite.BG3SaveManager.yml  npm-sources.json
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: divine.rs  lib.rs  paths.rs  profile.rs  saves.rs
src/components/: BackupList.tsx  ProfileEditor.tsx  ProfileView.tsx  RunList.tsx  SaveDetail.tsx
