[package]
name = "bg3-save-manager"
version = "0.2.0"
description = "BG3 HonourMode Save Manager"
authors = ["Evernite"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = [] }
tauri-plugin-opener  = "2"
tauri-plugin-updater = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
dirs             = "5"
base64           = "0.22"
tokio            = { version = "1", features = ["full"] }
image            = { version = "0.25", default-features = false, features = ["png"] }
lz4_flex         = { version = "0.11", features = ["frame"] }
zstd             = { version = "0.13", default-features = false }
